# nano-vllm

./: .gitignore  QWEN.md  README.md  bench.py  download.py  example.py  main.py  pyproject.toml
benchmarks/: __init__.py  analysis.py  eagle_bench.py  requirements.txt
benchmarks/metrics/: __init__.py  collector.py
nanovllm/: config.py
nanovllm/engine/: block_manager.py  eagle_runner.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: layernorm.py  rotary_embedding.py  speculative_sampler.py
nanovllm/models/: qwen3.py
nanovllm/utils/: eagle_data.py  eagle_trainer.py  sharegpt_loader.py
report/: bench.md
scripts/: debug_acceptance.py  debug_eagle_nan.py  test_acceptance.py  train_eagle.py
tests/: test_eagle_draft_generation.py  test_eagle_draft_model.py  test_eagle_memory_management.py  test_eagle_scheduler_integration.py  test_eagle_speculative_verification.py  test_eagle_train.py  test_integration.py
